--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
                 <span class="btn__text">Warrior</span>
               </a>
             </div>      
@@ -157,7 +157,7 @@
         <a class="card__link btn btn--big btn--orange" 
            href="#" 
            next="card--battleground">
-          <span class="btn__prompt">></span>
+          <span class="btn__prompt"></span>
           <span class="btn__text">defeat your enemies</span>
         </a>
       </div>
