--- a/index.html
+++ b/index.html
@@ -10,12 +10,39 @@
 </head>
 
 <body>
+  <div id="container">
+
+    <form id="playerClass" class="form-inline">
+      <div class="form-group">
+        <div class="input-group">
+          <input type="text" class="form-control" id="userInput" placeholder="Enter your name.">
+        </div>
+        <div>
+          <p>Pick your class!</p>
+          <button id="cop" type="submit" class="btn btn-primary playerClass">Cop</button>
+          <button id="criminal" type="submit" class="btn btn-primary playerClass">Criminal</button>
+        </div>
+      </div>
+    </form>
+    <form class="form-inline">
+      <div class="form-group">
+        <p>Crush your enemies!</p>
+        <button type="submit" id="attack" class="btn btn-primary">Attack!</button>
+      </div>
+    </form>
 
 
 
+
+
+
+
+
+
+
+
+  </div>
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="javascripts/combatents.js"></script>
-
-
 </body>
 </html>
