--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
   </div>
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="javascripts/combatents.js"></script>
+  <script src="javascripts/combatants.js"></script>
+  <script src= "javascripts/gamegen.js"></script>
+  <script src="javascripts/DOM.js"></script>
 </body>
 </html>
