added EVLs and Julia's adjustements

--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <body>
   <div id="container">
 
-    <form id="playerClass" class="form-inline">
+    <div id="playerClass" class="form-inline">
       <div class="form-group">
         <div class="input-group">
           <input type="text" class="form-control" id="userInput" placeholder="Enter your name.">
         </div>
         <div>
           <p>Pick your class!</p>
-          <button id="cop" type="submit" class="btn btn-primary playerClass">Cop</button>
-          <button id="criminal" type="submit" class="btn btn-primary playerClass">Criminal</button>
+          <button id="cop" type="button" class="btn btn-primary playerClass">Cop</button>
+          <button id="criminal" type="button" class="btn btn-primary playerClass">Criminal</button>
         </div>
       </div>
-    </form>
-    <form class="form-inline">
-      <div class="form-group">
+    </div>
+    <div>
+      <div>
         <p>Crush your enemies!</p>
         <button type="submit" id="attack" class="btn btn-primary">Attack!</button>
       </div>
-    </form>
+    </div>
 
 
 
@@ -43,6 +43,9 @@
 
   </div>
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="javascripts/combatents.js"></script>
+  <script src="dist/app.js"></script>
+<!--   <script src="javascripts/DOM.js"></script>
+ -->
+
 </body>
 </html>
