Cop/Criminal Objects to console. Captures playerName.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div>
           <p>Pick your class!</p>
-          <button id="cop" type="button" class="btn btn-primary playerClass">Cop</button>
-          <button id="criminal" type="button" class="btn btn-primary playerClass">Criminal</button>
+          <button id="cop" type="button" class="playerClass btn btn-primary playerClass">Cop</button>
+          <button id="criminal" type="button" class="playerClass btn btn-primary playerClass">Criminal</button>
         </div>
       </div>
     </div>
