changes on gamegen.js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <p>Crush your enemies!</p>
         <button type="submit" id="attack" class="btn btn-primary">Attack!</button>
       </div>
-    </div>
+    <div id="copInfo"></div>
+    <div id ="criminalInfo"></div>
+  </div>
 
 
 
