--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <div id ="criminalInfo"></div>
   </div>
 
+    <img src="cartoon.gif" id="cartoon" class="visible">
+    <img src="dogcops.gif" id="dogcops" class="hidden">
 
 
 
