--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id ="criminalInfo"></div>
   </div>
 
-    <img src="cartoon.gif" id="cartoon" class="visible">
+    <img src="cartoon.gif" id="cartoon">
     <img src="dogcops.gif" id="dogcops" class="hidden">
 
 
