--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div id ="criminalInfo"></div>
   </div>
 
-    <img src="cartoon.gif" id="cartoon">
-    <img src="dogcops.gif" id="dogcops" class="hidden">
+    <img src="cartoon.gif" id="cartoon" class="hidden">
+    <img src="dogcops.gif" id="dogcops">
 
 
 
